--- a/index.html
+++ b/index.html
@@ -219,20 +219,20 @@
                     <div class="zones__slider">
                         <div class="swiper-wrapper">
                             <div class="zones__slide swiper-slide">
-                                <img src="img/zones/1.svg" alt="">
-                                <img class="zones__slide-mobile" src="img/zones/mobile-1.svg" alt="">
+                                <img src="img/zones/1.webp" alt="">
+                                <img class="zones__slide-mobile" src="img/zones/mobile-1.webp" alt="">
                             </div>
                             <div class="zones__slide swiper-slide">
-                                <img src="img/zones/2.svg" alt="">
-                                <img class="zones__slide-mobile" src="img/zones/mobile-2.svg" alt="">
+                                <img src="img/zones/2.webp" alt="">
+                                <img class="zones__slide-mobile" src="img/zones/mobile-2.webp" alt="">
                             </div>
                             <div class="zones__slide swiper-slide">
-                                <img src="img/zones/3.svg" alt="">
-                                <img class="zones__slide-mobile" src="img/zones/mobile-3.svg" alt="">
+                                <img src="img/zones/3.webp" alt="">
+                                <img class="zones__slide-mobile" src="img/zones/mobile-3.webp" alt="">
                             </div>
                             <div class="zones__slide swiper-slide">
-                                <img src="img/zones/4.svg" alt="">
-                                <img class="zones__slide-mobile" src="img/zones/mobile-4.svg" alt="">
+                                <img src="img/zones/4.webp" alt="">
+                                <img class="zones__slide-mobile" src="img/zones/mobile-4.webp" alt="">
                             </div>
                         </div>
                     </div>
